# amsel

./: .buildconfig  .gitignore  .project  README.md  meson.build  meson_options.txt
build-aux/: meson.build
build-aux/flatpak/: org.gnome.Amsel.json
data/: meson.build  org.gnome.Amsel.desktop.in
data/resources/: aml.gresource.xml  amsel.gresource.xml  atom-relax-ng.xml  meson.build  rss-relax-ng.xml  rss-schema.xsd
data/resources/icons/: meson.build
data/resources/ui/: addfeed.ui  entry.ui  gears_menu.ui  window.ui
doc/: fetch.puml  libalb-docs.sgml  meson.build
lib/: alb-debug.h.in  alb.h  amsel-debug.h.in  meson.build
lib/engine/: alb-cache.c  alb-cache.h  alb-database.c  alb-database.h  alb-engine.c  alb-engine.h  alb-parser-atom.c  alb-parser-atom.h  alb-parser-rss.c  alb-parser-rss.h  alb-parser-xml.c  alb-parser-xml.h  alb-parser.c  alb-parser.h  alb-request.c  alb-request.h  alb-sqlite-database.c  alb-sqlite-database.h  alb-validator-atom.c  alb-validator-atom.h  alb-validator-rss.c  alb-validator-rss.h  alb-validator.c  alb-validator.h  amsel-cache.c  amsel-cache.h  amsel-database.c  amsel-database.h  amsel-engine.c  amsel-engine.h  amsel-parser-atom.c  amsel-parser-atom.h  amsel-parser-rss.c  amsel-parser-rss.h  amsel-parser-xml.c  amsel-parser-xml.h  amsel-parser.c  amsel-parser.h  amsel-request.c  amsel-request.h  (+7 more)
lib/logging/: alb-log.c  alb-log.h
lib/model/: alb-channel.c  alb-channel.h  alb-entry.c  alb-entry.h  amsel-channel.c  amsel-channel.h  amsel-entry.c  amsel-entry.h
lib/opml/: alb-opml.c  alb-opml.h  amsel-opml.c  amsel-opml.h
lib/utils/: alb-date-parser.c  alb-date-parser.h  alb-sqlite-helper.c  alb-sqlite-helper.h  amsel-date-parser.c  amsel-date-parser.h
src/: addfeed.ui  addfeed_glade.ui  alb.h  aml-add-feed-dialog.c  aml-add-feed-dialog.h  aml-application-window.c  aml-application-window.h  aml-application.c  aml-application.h  aml-entry-row.c  aml-entry-row.h  aml.gresource.xml  amsel-debug.h.in  entry.ui  main.c  meson.build  shortcuts.ui  window.ui
src/downloader/: aml-downloader.c  aml-downloader.h
src/engine/: amsel-cache.c  amsel-cache.h  amsel-database.c  amsel-database.h  amsel-engine.c  amsel-engine.h  amsel-parser-atom.c  amsel-parser-atom.h  amsel-parser-rss.c  amsel-parser-rss.h  amsel-parser-xml.c  amsel-parser-xml.h  amsel-parser.c  amsel-parser.h  amsel-request.c  amsel-request.h  amsel-sqlite-database.c  amsel-sqlite-database.h  amsel-validator-atom.c  amsel-validator-atom.h  amsel-validator-rss.c  amsel-validator-rss.h  amsel-validator-xml.c  amsel-validator-xml.h  amsel-validator.c  amsel-validator.h  tags.j4BzPJ
src/model/: amsel-channel.c  amsel-channel.h  amsel-entry.c  amsel-entry.h
src/opml/: amsel-opml.c
src/utils/: amsel-date-parser.h  amsel-sqlite-helper.c  amsel-sqlite-helper.h
test/: amsel-memory-database.c  amsel-memory-database.h  cache.c  database.c  engine.c  meson.build  stresstest.c  utils.c
test/testdata_atom/: fail_not_valid.xml  parse.xml
test/testdata_cache/: pl_gnome1.xml  pl_gnome2.xml
test/testdata_rss/: fail_not_valid.xml  fail_wrong_item_element.xml  parse.xml  sane.xml
